added fallback logic for chat message persiste